views/style.styl
link-color = #36c
text-color = #333
bg-color = #F5F6F7

transition()
	-webkit-transition arguments
	-moz-transition arguments
	-o-transition arguments
	transition arguments

@font-face
	font-family 'didot'
	src url('css/fonts/didot.eot')
	src local('☺'), url('css/fonts/didot.woff') format('woff'), url('css/fonts/didot.ttf') format('truetype'), url('css/fonts/didot.svg') format('svg')
	font-weight normal
	font-style normal


html, body
	width 100%
	height 100%
	background bg-color url('images/bg.jpg') repeat-x

body
	font-family "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
	//font-family Arial,Helvetica,sans-serif;
	
	a
		text-decoration none
		color link-color
	
		*
			color text-color
	
	h1, h2, h3, h4, h5, h6
		font-family "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
		font-family Georgia,"Century Schoolbook","Times New Roman",Times,serif
		
	
	h1
		font-weight bold
	
	#shell
		margin 0px auto
		width 972px
	
	header, section, footer
		width 972px


	header
		position relative
		
	#header-overlay
		position absolute
		left 50px

	#header-top
		height 100px
		background-color #003564
		box-shadow 0 1px 3px rgba(0,0,0,.4);
		border-bottom 2px solid white 
		
	#header-bottom

		height 80px
		background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, rgb(51,102,153)),color-stop(1, rgb(255,255,255)));
		background-image: -moz-linear-gradient(center top,rgb(51,102,153) 0%,rgb(255,255,255) 100%)
		border-bottom-right-radius 4px
		border-bottom-left-radius 4px
		box-shadow: 0px 1px 3px rgba(0,0,0,.4)
		
		h1
			position relative
			z-index 2
			padding-top 3px

			a
				color white
				font-family didot
				font-size 40px
				font-weight normal
				letter-spacing -1px
				padding-left 10px
				text-shadow: 0px -1px 1px #666
				-webkit-transition text-shadow .2s linear
				-moz-transition text-shadow .2s linear

			a:hover
				text-shadow: 0px -1px 1px black
		nav
			position absolute
			z-index 2
			top 163px

			h2
				color #333
				font-size 0.8em
				text-transform uppercase
				float left
				margin-right 20px
				letter-spacing 1px
				text-shadow 0px 1px 0px white
				border-bottom 1px solid white
				padding-bottom 3px
				transition(border-color, .25s, linear)

				.active
					border-bottom-color #4D90F0
			h2:hover
				border-bottom-color #4D90F0
				
			h2.first
				margin-left 1em
			
			h2.last
			
			a
				color #333
	section
		margin-top 20px

#sidebar
	float right
	.container
		margin-bottom 10px

#shell .slideshow
	width 630px
	float left

